Update documentation for Performance and Translator enhancements.
- Add Project Leyden CDS optimization guide to README.
- Document Associative Arrays, OSC Support, and Deep Operator Overloading in TRANSLATOR.md.
- Update CLI usage examples.